[gd_scene load_steps=15 format=3 uid="uid://cbxnfno4eba6m"]

[ext_resource type="Theme" uid="uid://70upt1e30r52" path="res://Resources/Themes/ButtonTheme3.tres" id="1_kpnky"]
[ext_resource type="Script" path="res://Scripts/BaseUIComponents/BaseButton.gd" id="3_lhgw4"]
[ext_resource type="SystemFont" uid="uid://cet1proxcxegx" path="res://Resources/Fonts/SystemFontMedium.tres" id="3_y3dj7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_divmj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r3cau"]
bg_color = Color(0.6, 0.6, 0.6, 0.0980392)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_46m0k"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_skd82"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="Animation" id="Animation_01uhb"]
resource_name = "PushInBottom"
length = 0.15
step = 0.075
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Mask/MarginContainer:theme_override_constants/margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.2, 1),
"update": 0,
"values": [46, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Mask/MarginContainer:theme_override_constants/margin_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.05, 0.15),
"transitions": PackedFloat32Array(1, 0.2),
"update": 0,
"values": [0, 12]
}

[sub_resource type="Animation" id="Animation_pjnxe"]
resource_name = "PushInTop"
length = 0.15
step = 0.075
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Mask/MarginContainer:theme_override_constants/margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.05, 0.15),
"transitions": PackedFloat32Array(1, 0.2),
"update": 0,
"values": [0, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Mask/MarginContainer:theme_override_constants/margin_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.2, 1),
"update": 0,
"values": [46, 12]
}

[sub_resource type="Animation" id="Animation_biily"]
resource_name = "PushOutBottom"
length = 0.15
step = 0.075
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Mask/MarginContainer:theme_override_constants/margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(5, 1),
"update": 0,
"values": [12, 46]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%Button/../Mask/MarginContainer:theme_override_constants/margin_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0769231),
"transitions": PackedFloat32Array(1, 0.2),
"update": 0,
"values": [12, 0]
}

[sub_resource type="Animation" id="Animation_4fy4d"]
resource_name = "PushOutTop"
length = 0.15
step = 0.075
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Mask/MarginContainer:theme_override_constants/margin_bottom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(3, 1),
"update": 0,
"values": [12, 46]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%Button/../Mask/MarginContainer:theme_override_constants/margin_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0769231),
"transitions": PackedFloat32Array(1, 0.2),
"update": 1,
"values": [12, 0]
}

[sub_resource type="Animation" id="Animation_28wu7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Mask/MarginContainer:theme_override_constants/margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Mask/MarginContainer:theme_override_constants/margin_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [46]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%Button/../Mask/MarginContainer:theme_override_constants/margin_top")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("%Button/../Mask/MarginContainer:theme_override_constants/margin_bottom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [46]
}

[sub_resource type="Animation" id="Animation_7nmkk"]
resource_name = "Selected"
length = 0.1
step = 0.075
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Mask/MarginContainer:theme_override_constants/margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Mask/MarginContainer:theme_override_constants/margin_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ie7y1"]
_data = {
"PushInBottom": SubResource("Animation_01uhb"),
"PushInTop": SubResource("Animation_pjnxe"),
"PushOutBottom": SubResource("Animation_biily"),
"PushOutTop": SubResource("Animation_4fy4d"),
"RESET": SubResource("Animation_28wu7"),
"Selected": SubResource("Animation_7nmkk")
}

[node name="BaseButton" type="PanelContainer" groups=["NavigationButtonsGroup"]]
offset_right = 157.0
offset_bottom = 46.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_divmj")
script = ExtResource("3_lhgw4")

[node name="ColorRect" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r3cau")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Mask" type="PanelContainer" parent="HBoxContainer"]
clip_children = 1
custom_minimum_size = Vector2(4, 0)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_46m0k")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Mask"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 46

[node name="Line" type="PanelContainer" parent="HBoxContainer/Mask/MarginContainer"]
self_modulate = Color(0, 0.403922, 0.752941, 1)
custom_minimum_size = Vector2(4, 0)
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_skd82")

[node name="Button" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(46, 46)
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme = ExtResource("1_kpnky")
theme_override_constants/icon_max_width = 46
theme_override_fonts/font = ExtResource("3_y3dj7")
alignment = 0
text_overrun_behavior = 3
clip_text = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
root_node = NodePath("../HBoxContainer/Button")
libraries = {
"": SubResource("AnimationLibrary_ie7y1")
}

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="HBoxContainer/Button" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/Button" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
